@@ -51,7 +51,7 @@ same module to be loaded multiple times.</p>
 <p>A configuration that would match previous installations of mailfront
 using the qmail backend would use the following list of plugins:</p>
 
-<pre>check-fqdn:counters:mailrules:relayclient:qmail-validate:cvm-validate:add-received:patterns:accept-sender</pre>
+<pre>check-fqdn:counters:mailrules:relayclient:cvm-validate:qmail-validate:add-received:patterns:accept-sender</pre>
 
 <p>The included <tt>*front-qmail</tt> shell script wrappers for the
 <tt>mailfront</tt> program are preconfigured to load the above list of
